--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Join My Discord Community</title>
 
+     <!-- Google Site Verification -->
+    <meta name="google-site-verification" content="sTh8clH0gAnC8sikJvAKNkZB9CncMQBPsoZ_qRoIhkY" />
+
     <!-- Description for search engines -->
     <meta name="description" content="Join our Discord server to connect with gamers, developers, and creators! Engage in discussions, share your projects, and grow together in an awesome community!">
     
