--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
         header {
             text-align: center;
-            margin-bottom: 30px;
+            margin-top: 50px; /* Increased padding at the top */
         }
 
         h1 {
@@ -59,12 +59,12 @@
             background-color: #7289DA;
             border: none;
             color: white;
-            font-size: 1.5em;
-            padding: 15px 30px;
+            font-size: 2em; /* Increased font size for the button */
+            padding: 25px 50px; /* Increased padding for a bigger button */
             border-radius: 5px;
             cursor: pointer;
             text-transform: uppercase;
-            margin-top: 20px;
+            margin-top: 30px;
             transition: background-color 0.3s;
         }
 
@@ -78,6 +78,7 @@
 
         .image-container img {
             width: 100%;
+            max-width: 600px; /* Added max-width to control the image size */
             border-radius: 10px;
         }
 
@@ -107,20 +108,20 @@
 <div class="container">
     <p>Click the button below to join our Discord server and start connecting!</p>
     
-    <!-- Join Button that links to Discord -->
-    <a href="https://discord.gg/4XYhV9fjN6" target="_blank">
-        <button class="join-btn">Join Now</button>
-    </a>
-
     <!-- Image Section -->
     <div class="image-container">
         <img src="https://i.imgur.com/NJSsrjQ.jpeg" alt="Discord Community">
     </div>
+
+    <!-- Join Button that links to Discord -->
+    <a href="https://discord.gg/4XYhV9fjN6" target="_blank">
+        <button class="join-btn">Join Now</button>
+    </a>
 </div>
 
 <footer>
     <p>&copy; 2025 My Discord Community. All Rights Reserved.</p>
-    <p>Created with ❤️ by TPH Media</p>
+    <p>Created with ❤️ by [Your Name or Company]</p>
     <p><a href="https://discord.com">Discord</a> | <a href="https://github.com/tphmediamanagement">GitHub</a></p>
 </footer>
 
